Fix bowerfile and add some deps

--- a/bower.json
+++ b/bower.json
@@ -1,4 +1,9 @@
 {
   "name": "YOUR FACE",
   "private": true,
+  "dependencies": {
+    "jquery": "~2.1.0",
+    "underscore": "~1.6.0",
+    "angular": "~1.2.16"
+  }
 }
