Add an express server and a bunch of other stuff

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "jquery": "~2.1.0",
     "underscore": "~1.6.0",
-    "angular": "~1.2.16"
+    "angular": "~1.2.16",
+    "angular-resource": "~1.2.16"
   }
 }
