--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "jquery": "~2.1.0",
     "underscore": "~1.6.0",
     "angular": "~1.2.16",
-    "angular-resource": "~1.2.16"
+    "angular-resource": "~1.2.16",
+    "ng-FitText.js": "~2.3.0"
   }
 }
