--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "underscore": "~1.6.0",
     "angular": "~1.2.16",
     "angular-resource": "~1.2.16",
-    "ng-FitText.js": "~2.3.0"
+    "ng-FitText.js": "~2.3.0",
+    "angular-carousel": "~0.2.2"
   }
 }
