--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "express": "~3.5.1",
-    "nunjucks": "~1.0.4"
+    "nunjucks": "~1.0.4",
+    "commander": "~2.2.0"
   }
 }
